--- a/doc/开发文档(后).md
+++ b/doc/开发文档(后).md
@@ -1,4 +1,13 @@
 # 微服务
+### 环境初始化
+去项目的doc/example 打开终端
+```bash
+docker-compose up -d
+使用docker初始化一个环境
+```
+
+
+
 ```
 请求--通过http--->api网关---服务发现--->对应服务的客户端
 ---通过rpc--->对应服务的服务端---返回结果--->api网关--->返回响应
@@ -9,7 +18,8 @@
 简单来说就是服务端将自己的地址存放在服务发现中
 
 ----
-使用kitex+hertz进行微服务开发
+使用[kitex](https://www.cloudwego.io/zh/docs/kitex/overview/)+[hertz](https://www.cloudwego.io/zh/docs/kitex/overview/)进行微服务开发
+
 
 开发流程
 1. 定义好idl/xxx.thrift接口
